<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos">
    <string name="action">Action</string>
    <string name="activate_authentication">Enable authentication</string>
    <string name="activate_mqtt">Enable MQTT connection</string>
    <string name="activate_mqtt_explanation">Allows you to connect to an MQTT broker</string>
    <string name="activate_notification">Enable notifications</string>
    <string name="activate_vibration">Enable vibration</string>
    <string name="activate_vibration_explanation">Make your device vibrate during notifications</string>
    <string name="android_9_message">Warning: From version 9 of Android HTTPS is mandatory for network communications. Make sure you have HTTPS enabled on your Gladys. (The HTTPS will be automatically used even if you do not activate it in the settings if it is on)</string>
    <string name="app_name">Gladys</string>
    <string name="app_description">Your home assistant</string>
    <string name="app_version">Gladys Android version v1.0</string>
    <string name="assistance">Assistance</string>
    <string name="ask_him_something">Ask him something..</string>
    <string name="auto_start">Automatic start</string>
    <string name="auto_start_explanation">Start automatically when you start your device</string>
    <string name="cancel">Cancel</string>
    <string name="choose_color">Choose a color</string>
    <string name="connection">Connection</string>
    <string name="copied_text">Text copied in the clipboard</string>
    <string name="copy_text">Copy the text</string>
    <string name="delete">Delete</string>
    <string name="devicetype">Devices</string>
    <string name="dns_address">DNS / Public IP</string>
    <string name="dns_address_example">Example: myaddress.ddns.net</string>
    <string name="dns_port_default">Default: 443</string>
    <string name="edit">Edit</string>
    <string name="error">An error has occurred</string>
    <string name="firstname">First name</string>
    <string name="forum">Forum</string>
    <string name="general">General</string>
    <string name="geolocation">Geolocation</string>
    <string name="home">Home</string>
    <string name="host">Host</string>
    <string name="house_id">ID of the house</string>
    <string name="http">HTTP</string>
    <string name="https">HTTPS</string>
    <string name="indicator_light">Phone light</string>
    <string name="indicator_light_explanation">Blink the light on your device during notifications</string>
    <string name="info">Info</string>
    <string name="ip_address">Local IP address</string>
    <string name="ip_address_example">Example: 192.168.1.12</string>
    <string name="message">Message</string>
    <string name="mqtt">MQTT</string>
    <string name="mqtt_host_exemple">Example: m49.cloudmqtt.com</string>
    <string name="mqtt_port_exemple">Example: 16523</string>
    <string name="mqtt_user_example">Example: John</string>
    <string name="mqtt_user_password_example">Example: ufkH50dkdi</string>
    <string name="minimize">Minimize</string>
    <string name="name">Name</string>
    <string name="new_message">New message</string>
    <string name="new_task_action">New task: Action</string>
    <string name="new_task_event">New task: Event</string>
    <string name="new_task_mqtt">New task: MQTT</string>
    <string name="new_task_mode">New task: Mode</string>
    <string name="new_task_name">New task: Name</string>
    <string name="new_task_trigger">New task: Trigger</string>
    <string name="new_task_url">New task: URL</string>
    <string name="next">Next</string>
    <string name="news">New</string>
    <string name="no_connection">No connection available</string>
    <string name="no_device_displayed">There are no devices displayed here..</string>
    <string name="no_event_triggered">No events were triggered..</string>
    <string name="no_message_sended">Send her a message, she is able to speak..</string>
    <string name="no_tag">No tag</string>
    <string name="no_task_created">Do not have a task created ? Create in one !</string>
    <string name="notifications">Notifications</string>
    <string name="open_source_licence">Open source licenses</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="port_example">Example: 8080</string>
    <string name="prompt_message">Access the settings to configure the connection. Then come back here ;)</string>
    <string name="prompt_Title">Configuration</string>
    <string name="report_bug">Report a bug</string>
    <string name="retry">Retry</string>
    <string name="select_ringtone">Sound selection</string>
    <string name="select_ringtone_explanation">Choose the ringtone used by notifications</string>
    <string name="settings">Settings</string>
    <string name="task">Task</string>
    <string name="timeline">Timeline</string>
    <string name="token">Token</string>
    <string name="token_example">Example: 95g6s2d5g3e5s1fg5d7g46d</string>
    <string name="topic">topic</string>
    <string name="trigger_an_event">Trigger an event</string>
    <string name="trigger">Trigger</string>
    <string name="use_dns_address">Use a public DNS / IP</string>
    <string name="user_id">User ID</string>
    <string name="user_name">Username</string>
    <string name="url">URL</string>
    <string name="validate">Validate</string>
    <string name="writing_nfc_tag">Writing the NFC Tag</string>
</resources>
