<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings_button"
        android:icon="@drawable/ic_settings_24dp"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_button"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/news"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/minimize_button"
        android:icon="@drawable/ic_minimize_24dp"
        android:title="@string/minimize"
        android:visible="false"
        app:showAsAction="ifRoom" />


</menu>
